@@ -1,3 +1,5 @@
+2006/7/18 -- released version 20060718_trunk
+
 2006/7/17 -- released version 20060717_trunk
 
 2006/7/16 -- released version 20060716_trunk
